force-app/main/default/objects/XactlyExpress__XCReleaseRuleDetail__c/XactlyExpress__XCReleaseRuleDetail__c.object-meta.xml
<CustomObject>
    <label>XCReleaseRuleDetail</label>
    <nameField>
        <label>ReleaseRuleDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCReleaseRuleDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>