force-app/main/default/objects/XactlyExpress__XCReleaseRuleDetail__c/fields/XactlyExpress__ReleasePct__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ReleasePct__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ReleasePct</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>