force-app/main/default/objects/XactlyExpress__XCReleaseRuleDetail__c/fields/XactlyExpress__ReleaseRuleEventID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ReleaseRuleEventID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ReleaseRuleEventID</label>
    <referenceTo>XactlyExpress__XCReleaseRuleEvent__c</referenceTo>
    <relationshipLabel>XCReleaseRuleDetails</relationshipLabel>
    <relationshipName>XCReleaseRuleDetails</relationshipName>
    <type>Lookup</type>
</CustomField>