force-app/main/default/objects/XactlyExpress__XCReleaseRuleDetail__c/fields/XactlyExpress__ReleaseRuleID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ReleaseRuleID__c</fullName>
    <label>ReleaseRuleID</label>
    <referenceTo>XactlyExpress__XCReleaseRule__c</referenceTo>
    <relationshipLabel>XCReleaseRuleDetails</relationshipLabel>
    <relationshipName>XCReleaseRuleDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>